--- a/notebooks/07_missing_values.ipynb
+++ b/notebooks/07_missing_values.ipynb
@@ -15,12 +15,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "fad2705f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-07-12T14:40:38.533330Z",
-     "start_time": "2023-07-12T14:40:38.108802Z"
+     "end_time": "2023-08-01T14:53:28.701317Z",
+     "start_time": "2023-08-01T14:53:28.673113Z"
     }
    },
    "outputs": [],
@@ -31,12 +31,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "6cf9e666",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-07-12T14:40:49.386866Z",
-     "start_time": "2023-07-12T14:40:49.376094Z"
+     "end_time": "2023-08-01T14:53:28.981538Z",
+     "start_time": "2023-08-01T14:53:28.891975Z"
     }
    },
    "outputs": [
@@ -45,7 +45,7 @@
       "text/plain": "     A    B  C\n0  1.0  4.0  7\n1  2.0  NaN  8\n2  NaN  NaN  9",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>A</th>\n      <th>B</th>\n      <th>C</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1.0</td>\n      <td>4.0</td>\n      <td>7</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2.0</td>\n      <td>NaN</td>\n      <td>8</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>9</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,12 +75,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "17a6454f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-07-12T14:40:57.778255Z",
-     "start_time": "2023-07-12T14:40:57.764676Z"
+     "end_time": "2023-08-01T14:53:30.374149Z",
+     "start_time": "2023-08-01T14:53:30.358424Z"
     }
    },
    "outputs": [
@@ -88,7 +88,7 @@
      "data": {
       "text/plain": "nan"
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,12 +99,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "35dc8450",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-07-12T14:40:58.112401Z",
-     "start_time": "2023-07-12T14:40:58.094940Z"
+     "end_time": "2023-08-01T14:53:34.006580Z",
+     "start_time": "2023-08-01T14:53:33.951307Z"
     }
    },
    "outputs": [
@@ -112,7 +112,7 @@
      "data": {
       "text/plain": "nan"
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,12 +143,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "1e2b48d5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-07-12T14:40:59.590384Z",
-     "start_time": "2023-07-12T14:40:59.577Z"
+     "end_time": "2023-08-01T14:53:49.614368Z",
+     "start_time": "2023-08-01T14:53:49.585416Z"
     }
    },
    "outputs": [
@@ -156,7 +156,7 @@
      "data": {
       "text/plain": "1.5"
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,12 +167,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "96daf776",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-07-12T14:41:00.052388Z",
-     "start_time": "2023-07-12T14:41:00.035820Z"
+     "end_time": "2023-08-01T14:53:51.525042Z",
+     "start_time": "2023-08-01T14:53:51.507323Z"
     }
    },
    "outputs": [
@@ -180,7 +180,7 @@
      "data": {
       "text/plain": "nan"
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,10 +199,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "92901db0",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-08-01T14:54:05.539779Z",
+     "start_time": "2023-08-01T14:54:05.494150Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0    4.0\n1    5.0\n2    NaN\nName: A, dtype: float64"
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df['A'] + 3"
    ]
@@ -225,20 +239,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "61a4ebe9",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-08-01T14:54:16.464538Z",
+     "start_time": "2023-08-01T14:54:16.425736Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0    False\n1    False\n2    False\nName: A, dtype: bool"
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df['A'] == np.nan"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "1acc9e71",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-08-01T14:54:17.067784Z",
+     "start_time": "2023-08-01T14:54:17.036627Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "False"
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.nan == np.nan"
    ]
@@ -253,50 +295,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "3c7d6670",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-08-01T14:54:17.927297Z",
+     "start_time": "2023-08-01T14:54:17.900329Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0    False\n1    False\n2     True\nName: A, dtype: bool"
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df['A'].isna()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "4b95b7c2",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-08-01T14:54:19.886946Z",
+     "start_time": "2023-08-01T14:54:19.872455Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0     True\n1     True\n2    False\nName: A, dtype: bool"
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df['A'].notna()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "683cccc8",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-08-01T14:54:29.327008Z",
+     "start_time": "2023-08-01T14:54:29.265802Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "1"
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df['A'].isna().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "c023dd7d",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-08-01T14:54:31.200771Z",
+     "start_time": "2023-08-01T14:54:31.145247Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "A    1\nB    2\nC    0\ndtype: int64"
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.isna().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "82b582da",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-08-01T14:54:32.730787Z",
+     "start_time": "2023-08-01T14:54:32.702038Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "     A    B  C\n0  1.0  4.0  7\n1  2.0  NaN  8\n2  NaN  NaN  9",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>A</th>\n      <th>B</th>\n      <th>C</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1.0</td>\n      <td>4.0</td>\n      <td>7</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2.0</td>\n      <td>NaN</td>\n      <td>8</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>9</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df"
    ]
@@ -319,10 +432,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "788d650e",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-08-01T14:54:34.475810Z",
+     "start_time": "2023-08-01T14:54:34.447999Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "     A    B  C\n0  1.0  4.0  7",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>A</th>\n      <th>B</th>\n      <th>C</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1.0</td>\n      <td>4.0</td>\n      <td>7</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.dropna()"
    ]
@@ -337,10 +465,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "5bb3578c",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-08-01T14:54:36.118354Z",
+     "start_time": "2023-08-01T14:54:36.057669Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "     A    B  C\n0  1.0  4.0  7\n1  2.0  NaN  8",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>A</th>\n      <th>B</th>\n      <th>C</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1.0</td>\n      <td>4.0</td>\n      <td>7</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2.0</td>\n      <td>NaN</td>\n      <td>8</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.dropna(subset=['A', 'C'])"
    ]
